fix spacing

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body{
     padding:20px;
     border: 5px;
     width: 400px;
-    margin: 50px 50px 50px auto;
 }
 
 h1,h2{
